# apps/config-handler/src/controller/api.js
@@ -9,12 +9,15 @@ module.exports = {
     res.json(config);
   },
   reload: async (req, res) => {
-    const { body, auth } = req;
+    const { body, auth, api: { publisher }, headers } = req;
     console.log('body', body);
     if (auth !== 'rest-api') {
       return res.status(503).send('Unauthorized application access.');
     }
     await library.load();
+
+    const { 'x-session-id': mySessionId } = headers;
+    await publisher.publish('reload', body, { 'x-session-id': mySessionId });
 
     return res.json();
   },
